--- a/_includes/education.html
+++ b/_includes/education.html
@@ -20,4 +20,14 @@
             <em>Thesis: Validation of prediction rules for Counts Outcome in the presence of missing predictor data using multiple imputation and cross-validation</em>
         </p>
     </article>
+     <article>
+        <header>
+            <h1>Ph.D. in Statistics (current)</h1>
+            <span>Maastricht University</span>
+            <span><address>Limburg, Netherlands</address><time>2021 to present</time></span>
+        </header>
+        <p>
+            <em>Thesis: pending</em>
+        </p>
+    </article>
 </section>
