--- a/_includes/education.html
+++ b/_includes/education.html
@@ -5,8 +5,9 @@
 
     <div class="cv-item">
       <div class="cv-marker"></div>
+      <div class="cv-date">12/2021–12/2025</div>
       <div class="cv-content">
-        <h3>PhD in Statistics <span class="cv-dates">(12/2021–12/2025)</span></h3>
+        <h3>PhD in Statistics</h3>
         <p class="cv-institution">
           <a href="https://www.maastrichtuniversity.nl/" target="_blank">Maastricht University</a>, 
           <a href="https://en.wikipedia.org/wiki/Maastricht" target="_blank">Maastricht, Netherlands</a>
@@ -18,9 +19,9 @@
 
     <div class="cv-item">
       <div class="cv-marker"></div>
+      <div class="cv-date">02/2020–06/2021</div>
       <div class="cv-content">
-        <h3>MSc in Statistical Science for the Life and Behavioral Sciences (Specialization: Data Science) 
-          <span class="cv-dates">(02/2020–06/2021)</span></h3>
+        <h3>MSc in Statistical Science for the Life and Behavioral Sciences (Specialization: Data Science)</h3>
         <p class="cv-institution">
           <a href="https://www.universiteitleiden.nl/en" target="_blank">Leiden University</a>, 
           <a href="https://en.wikipedia.org/wiki/Leiden" target="_blank">Leiden, Netherlands</a>
@@ -32,8 +33,9 @@
 
     <div class="cv-item">
       <div class="cv-marker"></div>
+      <div class="cv-date">02/2018–02/2019</div>
       <div class="cv-content">
-        <h3>PhD in Biophysics (Discontinued) <span class="cv-dates">(02/2018–02/2019)</span></h3>
+        <h3>PhD in Biophysics (Discontinued)</h3>
         <p class="cv-institution">
           <a href="https://www.universiteitleiden.nl/en" target="_blank">Leiden University</a>, 
           <a href="https://en.wikipedia.org/wiki/Leiden" target="_blank">Leiden, Netherlands</a>
@@ -44,8 +46,9 @@
 
     <div class="cv-item">
       <div class="cv-marker"></div>
+      <div class="cv-date">08/2012–06/2017</div>
       <div class="cv-content">
-        <h3>BS–MS Dual Degree <span class="cv-dates">(08/2012–06/2017)</span></h3>
+        <h3>BS–MS Dual Degree in Physics</h3>
         <p class="cv-institution">
           <a href="https://www.iiserkol.ac.in/" target="_blank">Indian Institute of Science Education and Research Kolkata</a>, 
           <a href="https://en.wikipedia.org/wiki/Kolkata" target="_blank">Kolkata, India</a>
