--- a/_includes/industry.html
+++ b/_includes/industry.html
@@ -5,8 +5,9 @@
 
     <div class="cv-item">
       <div class="cv-marker"></div>
+      <div class="cv-date">04/2021–09/2021</div>
       <div class="cv-content">
-        <h3>Data Analyst & ML Engineer <span class="cv-dates">(04/2021–09/2021)</span></h3>
+        <h3>Data Analyst & ML Engineer</h3>
         <p class="cv-institution">
           <a href="https://integrify.io/" target="_blank">Integrify</a>, 
           <a href="https://en.wikipedia.org/wiki/Helsinki" target="_blank">Helsinki, Finland</a>
@@ -17,8 +18,9 @@
 
     <div class="cv-item">
       <div class="cv-marker"></div>
+      <div class="cv-date">10/2019–02/2020</div>
       <div class="cv-content">
-        <h3>Trainee Consultant <span class="cv-dates">(10/2019–02/2020)</span></h3>
+        <h3>Trainee Consultant</h3>
         <p class="cv-institution">
           <a href="https://www.prifina.com/" target="_blank">Prifina</a>, 
           <a href="https://en.wikipedia.org/wiki/Helsinki" target="_blank">Helsinki, Finland</a>
