--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header class="site-header">
-    <a href="{{ '/' | relative_url }}" class="logo">DM</a>
+    <a href="{{ '/' | relative_url }}" class="logo">🏠 Home</a>
     <nav class="nav">
       <a href="{{ '/about.html' | relative_url }}">About</a>
       <a href="{{ '/cv.html' | relative_url }}">CV</a>
