--- a/_includes/industry.html
+++ b/_includes/industry.html
@@ -1,32 +1,33 @@
 <section class="cv-section">
   <h2>Industry Experience</h2>
+
   <div class="timeline">
 
     <div class="cv-item">
-      <div class="cv-left">
-        <span class="cv-marker"></span>
-        <span class="cv-date">04/2021–09/2021</span>
-      </div>
+      <div class="cv-marker"></div>
+      <div class="cv-date">04/2021–09/2021</div>
       <div class="cv-content">
-        <h3>Data Analyst & Machine Learning Engineer</h3>
+        <h3>Data Analyst & ML Engineer</h3>
         <p class="cv-institution">
-          <a href="https://www.integrify.io/" target="_blank">Integrify</a>, Finland
+          <a href="https://integrify.io/" target="_blank">Integrify</a>, 
+          <a href="https://en.wikipedia.org/wiki/Helsinki" target="_blank">Helsinki, Finland</a>
         </p>
-        <p>Led chatbot development for aiding domestic violence victims using NLP and CUDA. Developed and deployed pipelines with Docker.</p>
+	<p> Completed an industry-focused bootcamp in Data Analytics and Statistical Learning (Machine and Deep Learning) at the Integrify International Academy, which helped me to master several different areas of data science along with the best practices from the perspective of a real-world production environment.</p>
+        <p>Led development of a chatbot for aiding domestic violence victims using NLP via CUDA (GPU training); deployed deep learning models in production.</p>
       </div>
     </div>
 
     <div class="cv-item">
-      <div class="cv-left">
-        <span class="cv-marker"></span>
-        <span class="cv-date">10/2019–02/2020</span>
-      </div>
+      <div class="cv-marker"></div>
+      <div class="cv-date">10/2019–02/2020</div>
       <div class="cv-content">
         <h3>Trainee Consultant</h3>
         <p class="cv-institution">
-          <a href="https://www.prifina.com/" target="_blank">Prifina</a>, Finland
+          <a href="https://www.prifina.com/" target="_blank">Prifina</a>, 
+          <a href="https://en.wikipedia.org/wiki/Helsinki" target="_blank">Helsinki, Finland</a>
         </p>
-        <p>Developed automation workflows and robotic process automation scripts for acquisition, wrangling, and visualization of personal data pipelines.</p>
+	<p>Combined data acquisitions from frameworks (API and WebScraping) to collect user information.</p>
+        <p>Developed automation workflows (RPA scripts) enabling automatic collection of data, combining the data from sources, and providing exploratory analytics.</p>
       </div>
     </div>
 
