--- a/_includes/research.html
+++ b/_includes/research.html
@@ -5,28 +5,31 @@
     <div class="cv-item">
       <div class="cv-left">
         <span class="cv-marker"></span>
-        <span class="cv-date">12/2021–Present</span>
+        <span class="cv-date">11/2020–02/2021</span>
       </div>
       <div class="cv-content">
-        <h3>PhD Candidate in Statistics</h3>
+        <h3>Multiple Imputation in prognostic calibration of count data</h3>
         <p class="cv-institution">
-          <a href="https://www.maastrichtuniversity.nl/" target="_blank">Maastricht University</a>, Netherlands
+          <a href="https://www.universiteitleiden.nl/en" target="_blank">Leiden University</a>, Netherlands
         </p>
-        <p>Developing sample size determination methods for planning reliability studies using ICC under different ANOVA models. Work published in Statistical Methods in Medical Research and Statistics in Medicine.</p>
+        <p>Extended multiple imputation strategy (available only for binary data) to accommodate count outcomes.</p>
+	<p>Combined different pooling strategies of multiple imputation and calibrated prediction accuracy via cross-validation.</p>
       </div>
     </div>
 
     <div class="cv-item">
       <div class="cv-left">
         <span class="cv-marker"></span>
-        <span class="cv-date">2018</span>
+        <span class="cv-date">06/2020-08/2020</span>
       </div>
       <div class="cv-content">
-        <h3>Researcher (Biophysics Lab)</h3>
+        <h3>HCQ cocktail against early COVID-19 infection</h3>
         <p class="cv-institution">
           <a href="https://www.universiteitleiden.nl/en" target="_blank">Leiden University</a>, Netherlands
         </p>
-        <p>Modelled protein aggregation kinetics using PDEs in EPR lab, focusing on α-synuclein aggregation. Published in PLOS ONE.</p>
+        <p>Developed a severity index for corona infections using patient comorbidity data and based on survival outcomes.</p>
+	<p>Uncovered the misuse of hydroxychloroquine administration in early COVID-19 cases.</p>
+	<p>Presented at Bernoulli IMS Symposium, 2020.</p>
       </div>
     </div>
 
