--- a/_includes/research.html
+++ b/_includes/research.html
@@ -8,12 +8,14 @@
         <span class="cv-date">11/2020–02/2021</span>
       </div>
       <div class="cv-content">
-        <h3>Multiple Imputation in prognostic calibration of count data</h3>
+         <h3 class="cv-toggle">Multiple Imputation in prognostic calibration of count data</h3>
         <p class="cv-institution">
           <a href="https://www.universiteitleiden.nl/en" target="_blank">Leiden University</a>, Netherlands
         </p>
+	<div class="cv-details">
         <p>Extended multiple imputation strategy (available only for binary data) to accommodate count outcomes.</p>
 	<p>Combined different pooling strategies of multiple imputation and calibrated prediction accuracy via cross-validation.</p>
+	</div>
       </div>
     </div>
 
@@ -23,13 +25,15 @@
         <span class="cv-date">06/2020-08/2020</span>
       </div>
       <div class="cv-content">
-        <h3>HCQ cocktail against early COVID-19 infection</h3>
+         <h3 class="cv-toggle">HCQ cocktail against early COVID-19 infection</h3>
         <p class="cv-institution">
           <a href="https://www.universiteitleiden.nl/en" target="_blank">Leiden University</a>, Netherlands
         </p>
+	<div class="cv-details">
         <p>Developed a severity index for corona infections using patient comorbidity data and based on survival outcomes.</p>
 	<p>Uncovered the misuse of hydroxychloroquine administration in early COVID-19 cases.</p>
 	<p>Presented at Bernoulli IMS Symposium, 2020.</p>
+	</div>
       </div>
     </div>
 
