--- a/_includes/education.html
+++ b/_includes/education.html
@@ -8,12 +8,14 @@
         <span class="cv-date">12/2021–12/2025</span>
       </div>
       <div class="cv-content">
-        <h3>PhD in Statistics</h3>
+        <h3 class="cv-toggle">PhD in Statistics</h3>
         <p class="cv-institution">
           <a href="https://www.maastrichtuniversity.nl/" target="_blank">Maastricht University</a>, Netherlands
         </p>
+	<div class="cv-details">
         <p><em>Thesis Title:</em> Planning with Confidence: Designing quantitative reliability studies using the Intraclass Correlation Coefficient</p>
         <p><em>Supervisors:</em> Dr. Sophie Vanbelle, Dr. Math J.J.M. Candel, Dr. Alberto Cassese</p>
+	</div>
       </div>
     </div>
 
@@ -23,12 +25,14 @@
         <span class="cv-date">02/2020–06/2021</span>
       </div>
       <div class="cv-content">
-        <h3>MSc in Statistical Science for the Life and Behavioral Sciences (Specialization: Data Science)</h3>
+        <h3 class="cv-toggle">MSc in Statistical Science for the Life and Behavioral Sciences (Specialization: Data Science)</h3>
         <p class="cv-institution">
           <a href="https://www.universiteitleiden.nl/en" target="_blank">Leiden University</a>, Netherlands
         </p>
+	<div class="cv-details">
         <p><em>Thesis Title:</em> Validation Of Prediction Rules For Counts Outcome In The Presence Of Missing Predictor Data Using Multiple Imputation And Cross-Validation</p>
         <p><em>Thesis Supervisor:</em> Dr. Bart Mertens</p>
+	</div>
       </div>
     </div>
 
@@ -38,11 +42,13 @@
         <span class="cv-date">02/2018–02/2019</span>
       </div>
       <div class="cv-content">
-        <h3>PhD in Biophysics (Discontinued)</h3>
+        <h3 class="cv-toggle">PhD in Biophysics (Discontinued)</h3>
         <p class="cv-institution">
           <a href="https://www.universiteitleiden.nl/en" target="_blank">Leiden University</a>, Netherlands
         </p>
+	<div class="cv-details">
         <p><em>Supervisors:</em> Dr. Martina Huber, Dr. Herre van der Zant</p>
+	</div>
       </div>
     </div>
 
@@ -52,12 +58,14 @@
         <span class="cv-date">08/2012–06/2017</span>
       </div>
       <div class="cv-content">
-        <h3>BS–MS Dual Degree in Physics</h3>
+        <h3 class="cv-toggle">BS–MS Dual Degree in Physics</h3>
         <p class="cv-institution">
           <a href="https://www.iiserkol.ac.in/" target="_blank">Indian Institute of Science Education and Research Kolkata</a>, India
         </p>
+	<div class="cv-details">
         <p><em>Thesis Title:</em> Nutation of Sidebands from MASS (Magic Angle Sample Spinning)</p>
         <p><em>Thesis Supervisor:</em> Dr. Rangeet Bhattacharyya</p>
+	</div>
       </div>
     </div>
 
