--- a/_includes/industry.html
+++ b/_includes/industry.html
@@ -4,34 +4,38 @@
   <div class="timeline">
 
     <div class="cv-item">
-      <div class="cv-marker"></div>
-      <div class="cv-date">04/2021–09/2021</div>
+      <div class="cv-left">
+        <span class="cv-marker"></span>
+        <span class="cv-date">04/2021–09/2021</span>
+      </div>
       <div class="cv-content">
-         <h3 class="cv-toggle">Data Analyst & ML Engineer</h3>
+        <h3 class="cv-toggle">Data Analyst & ML Engineer</h3>
         <p class="cv-institution">
           <a href="https://integrify.io/" target="_blank">Integrify</a>, 
           <a href="https://en.wikipedia.org/wiki/Helsinki" target="_blank">Helsinki, Finland</a>
         </p>
-	<div class="cv-details">
-	<p> Completed an industry-focused bootcamp in Data Analytics and Statistical Learning (Machine and Deep Learning) at the Integrify International Academy, which helped me to master several different areas of data science along with the best practices from the perspective of a real-world production environment.</p>
-        <p>Led development of a chatbot for aiding domestic violence victims using NLP via CUDA (GPU training); deployed deep learning models in production.</p>
-	</div>
+        <div class="cv-details">
+          <p>Completed an industry-focused bootcamp in Data Analytics and Statistical Learning (Machine and Deep Learning) at the Integrify International Academy.</p>
+          <p>Led development of a chatbot for aiding domestic violence victims using NLP via CUDA (GPU training); deployed deep learning models in production.</p>
+        </div>
       </div>
     </div>
 
     <div class="cv-item">
-      <div class="cv-marker"></div>
-      <div class="cv-date">10/2019–02/2020</div>
+      <div class="cv-left">
+        <span class="cv-marker"></span>
+        <span class="cv-date">10/2019–02/2020</span>
+      </div>
       <div class="cv-content">
-         <h3 class="cv-toggle">Trainee Consultant</h3>
+        <h3 class="cv-toggle">Trainee Consultant</h3>
         <p class="cv-institution">
           <a href="https://www.prifina.com/" target="_blank">Prifina</a>, 
           <a href="https://en.wikipedia.org/wiki/Helsinki" target="_blank">Helsinki, Finland</a>
         </p>
-	<div class="cv-details">
-	<p>Combined data acquisitions from frameworks (API and WebScraping) to collect user information.</p>
-        <p>Developed automation workflows (RPA scripts) enabling automatic collection of data, combining the data from sources, and providing exploratory analytics.</p>
-	</div>
+        <div class="cv-details">
+          <p>Combined data acquisitions from frameworks (API and WebScraping) to collect user information.</p>
+          <p>Developed automation workflows (RPA scripts) enabling automatic collection of data, combining the data from sources, and providing exploratory analytics.</p>
+        </div>
       </div>
     </div>
 
